tests/baselines/reference/parserStrictMode6.errors.txt
parserStrictMode6.ts(2,1): error TS1100: Invalid use of 'eval' in strict mode.
parserStrictMode6.ts(2,1): error TS2630: Cannot assign to 'eval' because it is a function.


==== parserStrictMode6.ts (2 errors) ====
    "use strict";
    eval++;
    ~~~~
!!! error TS1100: Invalid use of 'eval' in strict mode.
    ~~~~
!!! error TS2630: Cannot assign to 'eval' because it is a function.